<resources>
    <string name="app_name">Budget Tracker</string>

    <string name="todo">TODO</string>
    <string name="no_transaction_yet">No Transaction Yet!</string>
    <string name="after_your_first_transaction_you_will_be_able_to_view_it_here">After your first transaction you will be able to view it here</string>

    <string name="theme_mode">Theme Mode</string>

    <string name="text_save_transaction">Save Transaction</string>
    <string name="text_ui_mode">UI Mode</string>
    <string name="text_total_income">Total Income</string>
    <string name="text_total_expense">Total Expense</string>
    <string name="text_total_balance">Total Balance</string>
    <string name="balance">Balance</string>
    <string name="text_recent_transactions">Recent Transactions</string>
    <string name="text_view_all">View all</string>
    <string name="text_expense_when">When</string>
    <string name="text_expense_amount">Amount</string>
    <string name="text_expense_transaction_type">Transaction type</string>
    <string name="text_expense_tag">Tag</string>
    <string name="text_expense_note">Note</string>
    <string name="text_expense_add_transaction">Save Transaction</string>
    <string name="text_expense">£</string>
    <string name="success_expense_saved">Transaction saved successfully</string>
    <string name="success_transaction_delete">Transaction deleted successfully!</string>
    <string name="text_title">Title</string>
    <string name="text_about">About</string>
    <string name="text_filter">Filter</string>
    <string name="text_edit">Edit</string>
    <string name="text_createdAt">Created At</string>
    <string name="selection_value_none">None</string>
    <string name="category">Category</string>
    <string name="text_error">Transaction exported failed ☹</string>
    <string name="text_undo">Undo</string>
    <string name="text_delete">Delete</string>
    <string name="text_share">Share</string>
    <string name="text_detail">Details</string>
    <string name="text_share_as_text">Share as Text</string>
    <string name="text_share_as_image">"Share as Image "</string>
    <string name="text_export_csv">Expoet as csv</string>
    <string name="text_add_transaction">Add Budget</string>
    <string name="text_error_occurred">Error</string>
    <string name="share_message">\%s \nAmount: %s, \nTransaction-Type: %s, \nTag: %s, \nDate: %s, \nNote: %s, \nCreatedAt: %s \n\nVisit: https://github.com/Mustafa-Elazab</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="text_start_now">Start Now</string>
    <string name="home">Home</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="settings">Settings</string>

    <string name="about_content">Budget Tracker can certainly help you when you need to manage your budget</string>

    <string name="housing">Housing</string>
    <string name="transportation">Transportation</string>
    <string name="food">Food</string>
    <string name="utilities">Utilities</string>
    <string name="insurance">Insurance</string>
    <string name="healthcare">Healthcare</string>
    <string name="saving_debts">Saving &amp; Debts</string>
    <string name="personal_spending">Personal Spending</string>
    <string name="entertainment">Entertainment</string>
    <string name="other">Other</string>
    <string name="language">Language</string>
    <string name="version">v : 1.0.0</string>
    <string name="erase_all_data">Erase All Data</string>
    <string name="contact_us">Contact Us</string>

    <string name="dialog_delete_content">Are you sure want to delete all transactions</string>
    <string name="dialog_balance_content">Monthly Balance</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>

    <string name="you_can_contact_with_us">you can contact with us</string>
    <string name="gmail">Gmail</string>
    <string name="whatsapp">whatsApp</string>
    <string name="facebook">facebook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>