<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.contact.ContactFragment">


    <include
        android:id="@+id/app_bar"
        layout="@layout/back_appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar"
        android:layout_marginTop="@dimen/_20sdp">

        <ImageView
            android:id="@+id/img"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_wallet_splash" />

        <TextView
            android:id="@+id/tv_app_name"
            style="@style/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/tv_contact"
            style="@style/contentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_app_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/you_can_contact_with_us" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_facebook"
            android:layout_width="match_parent"
            android:layout_below="@id/tv_contact"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
           >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/facebook" />

                <TextView
                    style="@style/contentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/facebook" />


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_whats"
            android:layout_width="match_parent"
            android:layout_below="@id/card_facebook"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/whatsapp" />

                <TextView
                    style="@style/contentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/whatsapp" />


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_gmail"
            android:layout_width="match_parent"
            android:layout_below="@id/card_whats"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/gmail" />

                <TextView
                    style="@style/contentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/gmail" />


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </RelativeLayout>

</RelativeLayout>